<resources>
    <string name="app_name">LootBox Store</string>
    <string name="prefs_file">com.example.apppedidosandroid.PREFERENCE_FILE_KEY</string>
    <string name="profile">Profile</string>
    <string name="notifications">Receive notifications</string>
    <string name="logout">Log Out</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="addDirections">Add New Address</string>
    <string name="directions">Addresses</string>
    <string name="billing">Billing address</string>
    <string name="app_title">LootBox Store</string>
    <string name="strategy">Strategy</string>
    <string name="foryou">Suggestions for you</string>
    <string name="SearchIconDescription">Search for a product</string>
    <string name="CartIconDescription">Look the cart products</string>
    <string name="ProfileIconDescription">Open your profile</string>
    <string name="back">Go back</string>
    <string name="myDirections">Billing addresses</string>
    <string name="placeholder">Placeholder</string>
    <string name="edit">Edit</string>
    <string name="personInfo">Personal information</string>
    <string name="full_name_hint">Full name</string>
    <string name="phone_hint">634512890</string>
    <string name="street">Street name</string>
    <string name="street_number">23</string>
    <string name="portal">4H</string>
    <string name="postal_code">87654</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="my_addresses">My addresses</string>
    <string name="suscribe_to_notifications">Suscribe to notifications</string>
    <string name="top_games">Most Popular</string>
    <string name="see_more">See more</string>
    <string name="description">Description</string>
    <string name="action">Action</string>
    <string name="offline_games">Offline</string>
    <string name="paid">Paid</string>
    <string name="multiplayer_games">Multiplayer</string>
    <string name="no_rating_beta_game">No rating (Beta Game)</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="installed">Game installed</string>
    <string name="uninstalled">Game uninstalled</string>
    <string name="not_installed">Not installed</string>
    <string name="http" translatable="false">http://52.47.208.71:5000</string>
    <string name="load">Working for you to have the best experience</string>
    <string name="Warning">¡Warning!</string>
    <string name="logOutConfirmation">Are you sure you want to log out?</string>
    <string name="delete_address">Delete address</string>
    <string name="question_address">Are you sure you want to delete this address?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="exit_or_continue">Do you want to exit or continue editing?</string>
    <string name="exit">Exit</string>
    <string name="editing">Continue editing</string>
    <string name="confirm_save">Confirm save</string>
    <string name="save_or_continue">Do you really want to save this address or continue editing?</string>
    <string name="light">Change to Light Mode</string>
    <string name="dark">Change to Dark Mode</string>
    <string name="register_successful">Registration successful</string>
    <string name="sign_in_with_new_account">Please, sign in with your new account</string>
    <string name="accept">Accept</string>
</resources>
